2000-01-24  Thomas E. Dickey  <dickey@clark.net>

	* aclocal.m4: resync with my-autoconf

	* src/checkup/src/checkup.c: use DirentT and Stat_t

1999-11-30  Thomas E. Dickey  <dickey@clark.net>

	* mkdirs.sh: update for OS/2

1999-06-27  Thomas E. Dickey  <dickey@clark.net>

	* src/link2rcs/test/case1.ref: add SCCS test-case

	* src/link2rcs/test/case2.ref: add SCCS-test-case

	* src/link2rcs/src/link2rcs.c:
	treat SCCS directories like RCS: make links to them

	* src/link2rcs/test/run_test.sh: add SCCS test-case

	* src/copy/src/copy.c, src/checkup/src/checkup.c, src/checkout/src/rcsget.c, src/checkout/src/checkout.c, src/checkin/src/rcsput.c, src/checkin/src/checkin.c, src/baseline/src/baseline.c:
	signed/unsigned-nits

1999-01-15  Thomas E. Dickey  <dickey@clark.net>

	* src/copy/src/copy.c:
	fix so I can copy files that begin with a "~" (if I read it from the
	directory entry I know it doesn't want to be expanded).
	also, flush stderr/stdout around the warnings (otherwise IRIX got all of
	the stderr's out before the stdout's)

1998-12-09  Thomas E. Dickey  <dickey@clark.net>

	* install-sh: resync with my-autoconf

1998-12-06  Thomas E. Dickey  <dickey@clark.net>

	* src/link2rcs/src/link2rcs.c:
	fix the case where we have symbolic links to a directory, by copying the
	link rather than trying to make directories.  I ran into this by having
	made links to ".", to resolve an include-path problem.  When trying to
	link the resulting directory, link2rcs went into a loop....

1998-04-22  Thomas E. Dickey  <dickey@clark.net>

	* src/checkin/src/checkin.c: HP-UX 9.x doesn't have setegid()

1998-02-02  Thomas E. Dickey  <dickey@clark.net>

	* mkdirs.sh: resync with my-autoconf

1997-09-28  Thomas E. Dickey  <dickey@clark.net>
