@@ -1,4 +1,4 @@
-MANIFEST for cm_tools, version t20000124
+MANIFEST for cm_tools, version t20000721
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for CM_TOOLS
